fix(sonar): harden null handling and diagnostic message checks
Prevent several runtime/static-analysis issues across XRay sync and Gherkin/LSP helpers.